--- a/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
@@ -47,10 +47,20 @@
                         <td>
                             <a href="javascript:void(0)" (click)="previewtemplate(template1,template)">Preview</a>
                         </td> 
-                        <td><span class="status" [ngClass]="getStatusClass(template['Status'])">{{template?.Status}} </span></td>
+                        <td><span class="status" [ngClass]="{'status-completed':true}">{{template?.Status}} </span></td>
                         <td class="text-center" *ngIf="access && !template?.IsParent"><i (click)="editdoc(template)" class="bi bi-pencil"></i></td>
-                        <td *ngIf="!access"><b>Restricted</b></td>
-                        <td *ngIf="access && template?.IsParent"><b>Locked</b></td>
+                        <td *ngIf="!access">
+                            <i class="bi bi-lock bi-lg" 
+                            [ngClass]="{'text-primary':true}"
+                            title="No Permissions">
+                            </i>
+                        </td>
+                        <td *ngIf="access && template?.IsParent">
+                            <i class="bi bi-lock bi-lg" 
+                            [ngClass]="{'text-primary':true}"
+                            title="{{ template?.IsParent ? 'Locked' : 'Unlocked' }}">
+                            </i>
+                        </td>
                     </tr>
                 </ng-template>
             </p-table>
