--- a/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/workflows/workflows.component.html
@@ -43,10 +43,20 @@
                         <td>{{docItem.departments}}</td>
                         <td>{{docItem.CreatedBy}}</td>
                         <td>{{docItem.CreatedDate | date}}</td>
-                        <td><span class="status text-nowrap" [ngClass]="getStatusClass(docItem['Status'])">{{docItem.Status}} </span></td>
+                        <td><span class="status" [ngClass]="{'status-completed':true}">{{docItem?.Status}} </span></td>
                         <td class="text-center"  *ngIf="access && !docItem?.IsParent"><i class="bi bi-pencil" (click)="editdoc(docItem)"></i></td>
-                        <td *ngIf="!access"><b>Restricted</b></td>
-                        <td *ngIf="access && docItem?.IsParent"><b>Locked</b></td>
+                        <td *ngIf="!access">
+                            <i class="bi bi-lock bi-lg" 
+                            [ngClass]="{'text-primary':true}"
+                            title="No Permissions">
+                            </i>
+                        </td>
+                        <td *ngIf="access && docItem?.IsParent">
+                            <i class="bi bi-lock bi-lg" 
+                            [ngClass]="{'text-primary':true}"
+                            title="{{ docItem?.IsParent ? 'Locked' : 'Unlocked' }}">
+                            </i>
+                        </td>
                     </tr>
                 </ng-template>
             </p-table>
