--- a/VlimsApp/ClientApp/src/app/modules/manager/components/document-revision/document-revision.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/document-revision/document-revision.component.html
@@ -45,7 +45,12 @@
                         <td><span class="status" [ngClass]="getStatusClass(revision['status'])">{{revision.status}} </span></td>
                         <td>{{revision?.version}}</td>
                         <td class="text-center" *ngIf="access"><i (click)="editdocrevision(revision)" class="bi bi-pencil"></i></td>
-                        <td *ngIf="!access">Restricted</td>
+                        <td *ngIf="!access">
+                            <i class="bi bi-lock bi-lg" 
+                            [ngClass]="{'text-primary':true}"
+                            title="No Permissions">
+                            </i>
+                          </td>
                     </tr>
                 </ng-template>
             </p-table>
