--- a/VlimsApp/ClientApp/src/app/modules/manager/components/effectives/effectives.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/effectives/effectives.component.html
@@ -63,8 +63,18 @@
                   ><i class="bi bi-arrow-right"></i
                 ></a>
               </td>
-              <td *ngIf="!access">Restricted</td>
-              <td *ngIf="access && effective?.status=='Approved' || effective?.status=='Reviewed'"><b>Restricted</b></td>
+              <td *ngIf="!access">
+                <i class="bi bi-lock bi-lg" 
+                [ngClass]="{'text-primary':true}"
+                title="No Permissions">
+                </i>
+              </td>
+              <td *ngIf="access && islocked(effective?.status)">
+                <i class="bi bi-lock bi-lg" 
+                [ngClass]="{'text-primary':true}"
+                title="{{ 'Locked'}}">
+                </i>
+              </td>
             </tr>
           </ng-template>
         </p-table>
