--- a/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/existing-document-request/existing-document-request.component.html
@@ -45,7 +45,12 @@
                       <!-- <td>{{existingdoc?.approvedby}}</td>
                       <td>{{existingdoc?.approvedOn| date}}</td> -->
                       <td class="text-center" *ngIf="access"><i (click)="editExistingDoc(existingdoc)" class="bi bi-pencil"></i></td>
-                      <td *ngIf="!access">Restricted</td>
+                      <td *ngIf="!access">
+                        <i class="bi bi-lock bi-lg" 
+                        [ngClass]="{'text-primary':true}"
+                        title="No Permissions">
+                        </i>
+                      </td>
                   </tr>
               </ng-template>
           </p-table>
