--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
@@ -19,7 +19,7 @@
                      placeholder="Document Type Name"
                      [(ngModel)]="documentType.Documenttypename" [disabled]="editMode" 
                      required
-                     #documentTypeInput="ngModel"
+                     #documentTypeInput="ngModel" maxlength="25"
                      />
                      <div *ngIf="documentTypeInput.invalid && (documentTypeInput.dirty || documentTypeInput.touched)" class="text-danger">
                       Enter Document Type.
