--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/changepassword/changepassword.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/changepassword/changepassword.component.html
@@ -32,9 +32,15 @@
           id="newPassword"
           name="newPassword"
           class="form-control"
-          [(ngModel)]="newPassword"
+          [(ngModel)]="newPassword" maxlength="12"
           required required  #newPasswordInput="ngModel"
         />
+        <span *ngIf="newPassword" class="password-complexity">
+          Password complexity: 
+          <span [ngClass]="getPasswordComplexityClass(newPassword)">
+              {{ getPasswordComplexityText(newPassword) }}
+          </span>
+      </span>
         <div *ngIf="newPasswordInput.invalid && (newPasswordInput.dirty || newPasswordInput.touched)" class="text-danger">
             New Password is required.
           </div>
@@ -48,9 +54,15 @@
           id="confirmNewPassword"
           name="confirmNewPassword"
           class="form-control"
-          [(ngModel)]="confirmNewPassword"
+          [(ngModel)]="confirmNewPassword" maxlength="12"
           required #confirmNewPasswordInput="ngModel"
         />
+        <span *ngIf="confirmNewPassword" class="password-complexity">
+          Password complexity: 
+          <span [ngClass]="getPasswordComplexityClass(confirmNewPassword)">
+              {{ getPasswordComplexityText(confirmNewPassword) }}
+          </span>
+      </span>
         <div *ngIf="confirmNewPasswordInput.invalid && (confirmNewPasswordInput.dirty || confirmNewPasswordInput.touched)" class="text-danger">
             Confirm new Password is required.
           </div>
