--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/User-Group/usergroupconfiguration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/User-Group/usergroupconfiguration.component.html
@@ -20,7 +20,7 @@
             <th scope="col">Unique Code</th>
             <th scope="col">Total users</th>
             <th scope="col">Status</th>
-            <th scope="col">Actions</th>
+            <th scope="col">Modify</th>
           </tr>
         </thead>
         <tbody>
@@ -75,7 +75,7 @@
               <th pSortableColumn="registeredon" style="width:20%">Registered On<p-sortIcon field="registeredon"></p-sortIcon></th>
               <th pSortableColumn="Status" style="width:20%">Status<p-sortIcon field="Status"></p-sortIcon></th>
               <th pSortableColumn="totalusers" style="width:20%">Total Users<p-sortIcon field="totalusers"></p-sortIcon></th>
-              <th style="width:80px">Actions</th>
+              <th style="width:80px">Modify</th>
             </tr>
           </ng-template>
           <ng-template pTemplate="body" let-doc let-i="rowIndex">
