--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/new-plant-registration/new-plant-registration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/new-plant-registration/new-plant-registration.component.html
@@ -62,7 +62,7 @@
             </div>
           </div>
           <div class="form-group row">
-            <label for="Comments" class="col-sm-2 col-form-label">Comments<span style="color: red; font-weight: bolder;">*</span></label>
+            <label for="Comments" class="col-sm-2 col-form-label">Comments</label>
             <div class="col-sm-10">
               <input type="text"
                      class="form-control"
@@ -73,7 +73,7 @@
                      required
                      #CommentsInput="ngModel" />
                      <div *ngIf="CommentsInput.invalid && (CommentsInput.dirty || CommentsInput.touched)" class="text-danger">
-                      Write Comments.
+                      
                     </div>
             </div>
           </div>
@@ -83,7 +83,7 @@
 
         <div class="form-group row my-4">
           <div class="col-sm-10 offset-sm-2">
-            <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Back</button>
+            <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
             <button type="submit" class="btn btn-primary" *ngIf="!editMode" (click)="submit(adddoc)">Submit</button>
             <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
           </div>
