--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/plantmanagement/plantmanagement.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/plantmanagement/plantmanagement.component.html
@@ -26,11 +26,11 @@
               <th pSortableColumn="Plant Name" style="width:10%">Plant Name</th>
               <th pSortableColumn="Plant Code" style="width:15%">Plant Code</th>
               <th pSortableColumn="PlantAddress" style="width:20%">Plant Address</th>
-              <th pSortableColumn="Comments" style="width:20%">Comments</th>
+            
               <th pSortableColumn="Registered By" style="width:200px">Registered By</th>
               <th pSortableColumn="Registered On" style="width:200px">Registered On </th>
               <th style="width:80px">Status</th>
-              <th style="width:80px">Actions</th>
+              <th style="width:80px">Modify</th>
 
             </tr>
           </ng-template>
