--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/register/register.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/register/register.component.html
@@ -17,7 +17,7 @@
                      class="form-control"
                      id="firstname"
                      name="firstname"
-                     placeholder="Enter First Nmae"
+                     placeholder="Enter First Name"
                      [(ngModel)]="adduser.FirstName" (ngModelChange)="calculateTotalUsers()" [disabled]="editMode"
                      required
                      #firstnameInput="ngModel" />
@@ -49,7 +49,7 @@
                      class="form-control"
                      id="userid"
                      name="userid"
-                     placeholder="Enter Userid"
+                     placeholder="Enter User Id"
                      [(ngModel)]="adduser.UserID" readonly [disabled]="editMode" 
                      required
                      #useridInput="ngModel"/>
@@ -111,7 +111,7 @@
                      class="form-control"
                      id="doj"
                      name="doj"
-                     placeholder="Enter First Nmae"
+                     placeholder="Enter First Name"
                      [(ngModel)]="adduser.Doj" [disabled]="viewMode"
                      required
                      #dojInput="ngModel"
@@ -159,7 +159,7 @@
         </div>
         <div class="form-group row my-4">
           <div class="col-sm-10 offset-sm-2">
-            <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Back</button>
+            <button type="button" class="btn btn-outline-secondary mx-2" (click)="onCancel()">Cancel</button>
             <button type="submit" class="btn btn-primary" *ngIf="!editMode" [disabled]="!fm.form.valid">Submit</button>
             <button type="submit" class="btn btn-primary" *ngIf="editMode">Update</button>
           </div>
