--- a/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/assigned/assigned.component.html
@@ -14,7 +14,7 @@
                     <tr>
                         <th>#</th>
                         <th pSortableColumn="TaskType" style="width:20%">Task type <p-sortIcon field="TaskType"></p-sortIcon></th>
-                        <th pSortableColumn="TaskName" style="width:20%">Task Name <p-sortIcon field="TaskName"></p-sortIcon></th>
+                        <th pSortableColumn="TaskName" style="width:20%">Document Type<p-sortIcon field="TaskName"></p-sortIcon></th>
                         <th pSortableColumn="Stage" style="width:10%">Stage <p-sortIcon field="Stage"></p-sortIcon></th>
                         <!-- <th pSortableColumn="assignedGroup" style="width:15%">Assigned Group <p-sortIcon field="assignedGroup"></p-sortIcon></th> -->
                         <th pSortableColumn="initiatedBy" style="width:20%">Initiated By <p-sortIcon field="initiatedBy"></p-sortIcon></th>
