--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
@@ -44,7 +44,7 @@
                       </div>
             </div>
           </div>
-          <div class="form-group row">
+          <!-- <div class="form-group row">
             <label for="description" class="col-sm-2 col-form-label">Description  </label>
             <div class="col-sm-10">
               <textarea class="form-control"
@@ -53,10 +53,9 @@
                         rows="3"
                         placeholder="Description"
                         [(ngModel)]="documentType.Description" [disabled]="viewMode">                     
-                      </textarea>
-                      
+                      </textarea>                      
             </div>
-          </div>
+          </div> -->
           <div class="form-group row">
             <label for="department" class="col-sm-2 col-form-label">Assign to Department <span style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
