--- a/VlimsApp/ClientApp/src/app/modules/documents/components/document-types/document-types.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/document-types/document-types.component.html
@@ -24,7 +24,7 @@
                         <th>S.No</th>
                         <th pSortableColumn="Documenttypename" style="width:20%">Document type<p-sortIcon field="Documenttypename"></p-sortIcon></th>
                         <th pSortableColumn="documenttypeprefix" style="width:10%">Prefix <p-sortIcon field="documenttypeprefix"></p-sortIcon></th>
-                        <th pSortableColumn="Description" style="width:15%">Description<p-sortIcon field="Description"></p-sortIcon></th>
+                        <!-- <th pSortableColumn="Description" style="width:15%">Description<p-sortIcon field="Description"></p-sortIcon></th> -->
                         <th pSortableColumn="ModifiedBy" style="width:20%">Registered by<p-sortIcon field="ModifiedBy"></p-sortIcon></th>
                         <th pSortableColumn="ModifiedDate" style="width:200px">Registered On <p-sortIcon field="ModifiedDate"></p-sortIcon></th>
                         <th pSortableColumn="Status" style="width:200px">Status <p-sortIcon field="Status"></p-sortIcon></th>
@@ -37,7 +37,7 @@
                         <td>{{ i + 1 }}</td>  
                         <td>{{doc?.Documenttypename}}</td>
                         <td>{{doc?.documenttypeprefix}}</td>
-                        <td>{{doc?.Description}}</td>
+                        <!-- <td>{{doc?.Description}}</td> -->
                         <td>{{doc?.ModifiedBy}}</td>
                         <td>{{doc?.ModifiedDate | date}}</td>
                         <td><span class="status" [ngClass]="getStatusClass(doc['Status'])">{{doc.Status}} </span></td>
