--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-document-type/add-document-type.component.html
@@ -34,7 +34,7 @@
                      id="prefix"
                      name="prefix"
                      placeholder="Enter Prefix Name"
-                     [(ngModel)]="documentType.documenttypeprefix" [disabled]="viewMode"
+                     [(ngModel)]="documentType.documenttypeprefix" [disabled]="viewMode" maxlength="8"
                      required
                      #prefixInput="ngModel"
                       />
