--- a/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/templates/templates.component.html
@@ -27,7 +27,7 @@
                         <th>#</th>
                         <th pSortableColumn="Templatename" style="width:20%">Template Name<p-sortIcon field="Templatename"></p-sortIcon></th>
                         <th pSortableColumn="Uniquecode" style="width:10%">Unique Code <p-sortIcon field="Uniquecode"></p-sortIcon></th>
-                        <th pSortableColumn="description" style="width:15%">Description<p-sortIcon field="description"></p-sortIcon></th>
+                        <!-- <th pSortableColumn="description" style="width:15%">Description<p-sortIcon field="description"></p-sortIcon></th> -->
                         <th pSortableColumn="CreatedBy" style="width:20%">Registered by<p-sortIcon field="CreatedBy"></p-sortIcon></th>
                         <th pSortableColumn="CreatedDate" style="width:200px">Registered On <p-sortIcon field="CreatedDate"></p-sortIcon></th>
                         <th pSortableColumn="Preview" style="width:200px">Preview <p-sortIcon field="Preview"></p-sortIcon></th>
@@ -41,7 +41,7 @@
                         <td>{{ i + 1 }}</td>  
                         <td>{{template?.Templatename}}</td>
                         <td>{{template?.Uniquecode}}</td>
-                        <td>{{template?.Templatename}}</td>
+                        <!-- <td>{{template?.Templatename}}</td> -->
                         <td>{{template?.CreatedBy}}</td>
                         <td>{{template?.CreatedDate | date }}</td>
                         <td>
@@ -49,13 +49,13 @@
                         </td> 
                         <td><span class="status" [ngClass]="{'status-completed':true}">{{template?.Status}} </span></td>
                         <td class="text-center" *ngIf="access && !template?.IsParent"><i (click)="editdoc(template)" class="bi bi-pencil"></i></td>
-                        <td *ngIf="!access">
+                        <td class="text-center" *ngIf="!access">
                             <i class="bi bi-lock bi-lg" 
                             [ngClass]="{'text-primary':true}"
                             title="No Permissions">
                             </i>
                         </td>
-                        <td *ngIf="access && template?.IsParent">
+                        <td class="text-center" *ngIf="access && template?.IsParent">
                             <i class="bi bi-lock bi-lg" 
                             [ngClass]="{'text-primary':true}"
                             title="{{ template?.IsParent ? 'Locked' : 'Unlocked' }}">
