--- a/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
@@ -67,13 +67,13 @@
                 </span>
               </td>
               <td class="text-center" *ngIf="access && docPreperation?.status=='IN-PROGRESS'"><a (click)="navigateToAddPreparation(docPreperation)"><i  class="bi bi-arrow-right"></i></a></td>
-              <td *ngIf="!access">
+              <td class="text-center" *ngIf="!access">
                 <i class="bi bi-lock bi-lg" 
                 [ngClass]="{'text-primary':true}"
                 title="No Permissions">
                 </i>
               </td>
-              <td *ngIf="access && islocked(docPreperation?.status)">
+              <td class="text-center" *ngIf="access && islocked(docPreperation?.status)">
                 <i class="bi bi-lock bi-lg" 
                 [ngClass]="{'text-primary':true}"
                 title="{{ 'Locked'}}">
