--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/plantmanagement/plantmanagement.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/plantmanagement/plantmanagement.component.html
@@ -40,12 +40,17 @@
               <td>{{doc?.PlantName}}</td>
               <td>{{doc?.PlantCode}}</td>
               <td>{{doc?.PlantAddress}}</td>
-              <td>{{doc?.Comments}}</td>
+              <!-- <td>{{doc?.Comments}}</td> -->
               <td>{{doc?.ModifiedBy}}</td>
               <td>{{doc?.ModifiedDate }}</td>             
-              <td><span class="status" [ngClass]="getStatusClass(doc['Status'])">{{doc.Status}} </span></td>
+              <td><span class="status" [ngClass]="{'status-completed':true}">Active</span></td>
               <td class="text-center" *ngIf="access"><i class="bi bi-pencil" (click)="editdoc(doc)"></i></td>
-              <td *ngIf="!access">Restricted</td>
+              <td class="text-center" *ngIf="!access">
+                <i class="bi bi-lock bi-lg" 
+                [ngClass]="{'text-primary':true}"
+                title="No Permissions">
+            </i>
+        </td>
               <!--(click)="editdoc(doc)"-->
             </tr>
           </ng-template>
