--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Activate-deactivate-user/activate-deactivateuser.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Activate-deactivate-user/activate-deactivateuser.component.html
@@ -45,7 +45,12 @@
                   <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckChecked" #switchCheckbox [checked]="doc.Status === 'Active' ? true : false" (click)="update(doc,$event)">
                 </div>
               </td>
-              <td *ngIf="!access">Restricted</td>
+              <td class="text-center" *ngIf="!access">
+                <i class="bi bi-lock bi-lg" 
+                [ngClass]="{'text-primary':true}"
+                title="No Permissions">
+            </i>
+        </td>
             </tr>
           </ng-template>
         </p-table>
