--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/User-Group/usergroupconfiguration.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/User-Group/usergroupconfiguration.component.html
@@ -73,8 +73,9 @@
               <th pSortableColumn="code" style="width:20%">Unique Code<p-sortIcon field="code"></p-sortIcon></th>
               <th pSortableColumn="registeredby" style="width:20%">Registered By<p-sortIcon field="registeredby"></p-sortIcon></th>
               <th pSortableColumn="registeredon" style="width:20%">Registered On<p-sortIcon field="registeredon"></p-sortIcon></th>
-              <th pSortableColumn="Status" style="width:20%">Status<p-sortIcon field="Status"></p-sortIcon></th>
+              
               <th pSortableColumn="totalusers" style="width:20%">Total Users<p-sortIcon field="totalusers"></p-sortIcon></th>
+              <th pSortableColumn="Status" style="width:20%">Status<p-sortIcon field="Status"></p-sortIcon></th>
               <th style="width:80px">Modify</th>
             </tr>
           </ng-template>
@@ -86,9 +87,14 @@
               <td>{{doc?.createdBy}}</td>
               <td>{{doc?.createdDate}}</td>              
               <td>{{doc?.totalusers}}</td>
-              <td>{{doc?.Status}}</td>               
+              <td><span class="status" [ngClass]="{'status-completed':true}">Active</span></td>             
               <td class="text-center" (click)="editdoc(doc)" *ngIf="access"><i class="bi bi-pencil"></i></td>
-              <td *ngIf="!access">Restricted</td>
+              <td class="text-center" *ngIf="!access">
+                <i class="bi bi-lock bi-lg" 
+                [ngClass]="{'text-primary':true}"
+                title="No Permissions">
+            </i>
+        </td>
             </tr>
           </ng-template>
         </p-table>
