--- a/VlimsApp/ClientApp/src/app/modules/documents/components/document-types/document-types.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/document-types/document-types.component.html
@@ -50,7 +50,7 @@
                     </td>
                         <td class="text-center" *ngIf="access && doc?.IsParent"><i class="bi bi-lock bi-lg" 
                             [ngClass]="{'text-primary':true}"
-                            title="{{ doc?.IsParent ? 'Locked' : 'Unlocked' }}"></i></td>
+                            title="{{ doc?.IsParent ? 'Document type in use' : 'Unlocked' }}"></i></td>
                     </tr>
                 </ng-template>
             </p-table>
