--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
@@ -34,7 +34,8 @@
                    name="ucode"
                    placeholder="Enter Prefix"
                    [(ngModel)]="templateForm.Uniquecode"
-                   readonly     
+                   readonly   
+                   disabled
                    required
                    #ucodeInput="ngModel"
                    />
@@ -48,7 +49,11 @@
           <label for="docType" class="col-sm-2 col-form-label">Document Type <span style="color: red; font-weight: bolder;">*</span></label>
           <div class="col-sm-10">
             <p-dropdown [options]="typesDatasource" [(ngModel)]="selectedtype" placeholder="Select a Document Type"
-                        optionLabel="Documenttypename" id="types" name="types"></p-dropdown>
+                optionLabel="Documenttypename" id="types" name="types" [autoDisplayFirst]="false" [required]="true" #DocumenttypenameInput="ngModel">
+             </p-dropdown>
+             <div *ngIf="DocumenttypenameInput.invalid && DocumenttypenameInput.touched" class="text-danger">
+              Document Type is required.
+            </div>
             <!-- <input
               type="text"
               class="form-control mw-350"
@@ -60,7 +65,7 @@
           </div>
         </div>
         <div class="form-group row">
-          <label for="description" class="col-sm-2 col-form-label">Description <span style="color: red; font-weight: bolder;">*</span></label>
+          <label for="description" class="col-sm-2 col-form-label">Description</label>
           <div class="col-sm-10">
             <textarea class="form-control mw-350"
                       id="description"
@@ -68,15 +73,9 @@
                       rows="3"
                       placeholder="Description"
                       [(ngModel)]="templateForm.description"
-                      required
-                       #descriptionInput="ngModel">
-                     
-
+                     >
                     </textarea>
-                    <div *ngIf="descriptionInput.invalid && (descriptionInput.dirty || descriptionInput.touched)" class="text-danger">
-                      Enter description.
-      
-                    </div>
+                    
           </div>
         </div>
         <div class="form-group row">
@@ -363,7 +362,7 @@
                   (click)="onCancel()">
             Cancel
           </button>
-          <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid"  (click)="addTemplate()">Submit</button>
+          <button type="submit" class="btn btn-primary" [disabled]="!fm.form.valid"  (click)="addTemplate()">{{editMode?'Update':'Submit'}} </button>
           <button type="button" class="col-xs-1 mx-2  btn btn-success" *ngIf="viewMode && templateForm.Status!='Approved'" (click)="approve()">Approve</button>
           <button type="button" class="col-xs-1 mx-2 offset-sm-1 btn btn-primary" *ngIf="viewMode && templateForm.Status!='Approved'" (click)="reinitiative()">Re-Initiative</button>
           <button type="button" class="col-xs-1 mx-8 offset-sm-1 btn btn-danger" *ngIf="viewMode && templateForm.Status!='Approved'" (click)="reject()">Reject</button>
