--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/set-functional-profile/setfunctionalprofile.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/set-functional-profile/setfunctionalprofile.component.html
@@ -441,6 +441,20 @@
            
           />
         </div>
+        <label for="profile" class="col-sm-2 col-form-label"
+        >Download Print</label
+      >
+      <div class="col-sm-1">
+        <input
+          type="checkbox"
+          class="form-check-input"
+          id="downloadPrint"
+          name="downloadPrint"
+          placeholder=""
+          [(ngModel)]="profile.downloadPrint" [disabled]="viewMode"
+         
+        />
+      </div>
       </div>
       
      
