--- a/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
@@ -43,11 +43,17 @@
               <td>{{doc?.noofcopies}}</td>
 
               <!-- <td><span class="status" [ngClass]="getStatusClass(doc['status'])">{{doc.status}} </span></td> -->
-              <td class="text-center" (click)="editdoc(doc)" *ngIf="access"><i class="bi bi-pencil"></i></td>
+              <td class="text-center" (click)="editdoc(doc)" *ngIf="access && doc?.status==='IN-PROGRESS'"><i class="bi bi-pencil"></i></td>
               <td class="text-center" *ngIf="!access">
                 <i class="bi bi-lock bi-lg" 
                 [ngClass]="{'text-primary':true}"
                 title="No Permissions">
+                </i>
+              </td>
+              <td class="text-center" *ngIf="doc?.status==='Approved'">
+                <i class="bi bi-lock bi-lg" 
+                [ngClass]="{'text-primary':true}"
+                title="Approved">
                 </i>
               </td>
             </tr>
