--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-revision/review-revision.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-revision/review-revision.component.html
@@ -63,9 +63,9 @@
           </div>
 
           <div class="form-group row">
-            <label for="document" class="col-sm-2 col-form-label">Browse Document</label>
-            <div *ngIf="revision.document" class="col-sm-1">
-              <a class="link-opacity-100-hover" (click)="revision.document =revision.document">View Document</a>
+            <label for="document" class="col-sm-2 col-form-label">Document</label>
+            <div class="col-sm-1">
+              <a class="link-opacity-100-hover" (click)="previewtemplate(template)">View Document</a>
             </div>
           </div>
 
@@ -133,3 +133,17 @@
     </div>
   </div>
 </div>
+<ng-template #template>
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">Preview</h4>
+    <button type="button" class="close pull-right" aria-label="Close" (click)="closeModel()">
+      <span aria-hidden="true">×</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <iframe *ngIf="pdfUrl" [src]="pdfUrl" type="application/pdf" width="100%" height="500px"></iframe>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-default" (click)="closeModel()">Close</button>
+  </div>
+</ng-template>
