--- a/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/Print/document-print.component.html
@@ -6,7 +6,7 @@
       <div class="d-flex justify-content-between align-items-center">
         <h4 class="page-title flex-grow-1">Document Repository</h4>
         <div class="d-flex page-title-actions">
-          <input type="text" class="form-control" placeholder="Search" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')">
+          <input type="text" class="form-control" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')" placeholder="Search" >
           <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddPrint()" *ngIf="access">New</button>
         </div>
       </div>
@@ -15,7 +15,10 @@
   <div class="row p-2">  
     <div class="col">
       <div class="p-4 bg-white shadow-dark rounded-2">
-        <p-table #templatesTable [value]="requests" tableStyleClass="table table-striped" [rows]="itemsPerPage"
+        <p-table #templatesTable
+         [value]="requests"
+         [globalFilterFields]="['Document Type','Document Name','Document Number','Printed On','Printed by','Print Count']"
+         tableStyleClass="table table-striped" [rows]="itemsPerPage"
         [paginator]="true" [totalRecords]="requests.length"
         [rowsPerPageOptions]="rowsPerPageOptions" >
           <ng-template pTemplate="header">
