--- a/VlimsApp/ClientApp/src/app/modules/manager/components/effectives/effectives.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/effectives/effectives.component.html
@@ -4,7 +4,7 @@
       <div class="d-flex justify-content-between align-items-center">
         <h4 class="page-title flex-grow-1">Document Effective</h4>
         <div class="d-flex page-title-actions">
-          <input type="text" class="form-control" placeholder="Search" />
+          <input type="text" class="form-control" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" />
         </div>
       </div>
     </div>
@@ -12,8 +12,9 @@
   <div class="row p-2">
     <div class="col">
       <div class="p-4 bg-white shadow-dark rounded-2">
-        <p-table
+        <p-table #templatesTable
           [value]="effectivesDatasource"
+          [globalFilterFields]="['reqcode','documenttitle','documentnumber','documenttype','department','status']"
           tableStyleClass="table table-striped" [rows]="itemsPerPage"
             [paginator]="true" [totalRecords]="effectivesDatasource.length"
             [rowsPerPageOptions]="rowsPerPageOptions"
