--- a/VlimsApp/ClientApp/src/app/modules/authentication/components/Admin-Home/Admin-home.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/authentication/components/Admin-Home/Admin-home.component.html
@@ -47,6 +47,15 @@
       </div>
     </div>
 
+    <div class="col col-lg-3">
+      <div class="card" (click)="navigateTo('Audit')">
+        <div class="card-body">
+          <i class="fa fa-message"></i>
+          <h5 class="card-title">Audit Management</h5>
+        </div>
+      </div>
+    </div>
+
     <!-- <div class="col col-lg-3">
       <div class="card" (click)="navigateTo('Approval')">
         <div class="card-body">
