--- a/VlimsApp/ClientApp/src/app/modules/documents/components/document-types/document-types.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/document-types/document-types.component.html
@@ -5,7 +5,13 @@
             <div class="d-flex justify-content-between align-items-center">
                 <h4 class="page-title flex-grow-1">Document type configuration</h4>
                 <div class="d-flex page-title-actions">
-                  <input type="text" class="form-control" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search">
+
+                    <div class="input-group">
+                        <input type="text" class="form-control" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search">
+                        <span class="input-group-text"><i class="fas fa-search"></i></span>
+                      </div>
+
+                  
                   <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddDocumentType()" *ngIf="access">New</button>
                 </div>
               </div>
