--- a/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/add-request/add-request.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row p-2">
-    <div class="col">
+    <div class="col">      
       <h4 class="page-title">{{editMode? 'modify': 'New' }} Document Request</h4>
     </div>
   </div>
@@ -9,7 +9,7 @@
       <form (ngSubmit)="saveRequest()" #fm="ngForm">
         <div class="p-4 bg-white shadow-dark rounded-2">
           <div class="form-group row">
-            <label for="reqCode" class="col-sm-2 col-form-label">Req Code</label>
+            <label for="reqCode" class="col-sm-2 col-form-label">Request Code</label>
             <div class="col-sm-10">
               <input type="text" class="form-control" id="reqCode" name="reqCode" placeholder="System Generated"
                 [(ngModel)]="request.drid" [disabled]="viewMode" readonly />
