--- a/VlimsApp/ClientApp/src/app/modules/manager/components/requests/requests.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/requests/requests.component.html
@@ -4,9 +4,24 @@
            
             <div class="d-flex justify-content-between align-items-center">
                 <h4 class="page-title flex-grow-1" >Document Requests </h4>
+                <div class="back-icon" style="margin-right: 10px;">
+                    <div class="back-icon" style="margin-right: 10px;">
+                        <a href="javascript:void(0);" onclick="history.back();">
+                            <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+                        </a>
+                    </div>
+                 </div>
                 <div class="d-flex page-title-actions">
-                  <input type="text" class="form-control" placeholder="Search">
+                 
+                  <div class="input-group">
+
+                    <input type="text" class="form-control" placeholder="Search">
+                        <span class="input-group-text"><i class="fas fa-search"></i></span>
+
+                      </div>
                   <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddRequest()" *ngIf="access">New</button>
+                  <div class="back-icon" style="margin-right: 10px;">
+                </div>
                 </div>
               </div>
         </div>
@@ -14,13 +29,16 @@
     <div class="row p-2">
         <div class="col">
             <div class="p-4 bg-white shadow-dark rounded-2">
-            <p-table  [value]="requestsDatasource" tableStyleClass="table table-striped" [rows]="itemsPerPage"
+                <input type="text" class="form-control" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search">
+                <p-table #templatesTable [value]="requestsDatasource"
+               
+                 tableStyleClass="table table-striped" [rows]="itemsPerPage"
             [paginator]="true" [totalRecords]="requestsDatasource.length"
             [rowsPerPageOptions]="rowsPerPageOptions" >
                 <ng-template pTemplate="header">
                     <tr>
                         <th>#</th>
-                        <th pSortableColumn="drid" style="width:20%">Req Code<p-sortIcon field="drid"></p-sortIcon></th>
+                        <th pSortableColumn="drid" style="width:20%">Request Code<p-sortIcon field="drid"></p-sortIcon></th>
                         <th pSortableColumn="documenttype" style="width:10%">Document type <p-sortIcon field="documenttype"></p-sortIcon></th>
                         <th pSortableColumn="department" style="width:15%">Department<p-sortIcon field="department"></p-sortIcon></th>
                         <!-- <th pSortableColumn="modifiedBy" style="width:20%">Registered by<p-sortIcon field="modifiedBy"></p-sortIcon></th>
