--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-prepation/review-prepation.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
   <div class="row p-2">
     <div class="col">
-      <h4 class="page-title">Document Preparation ({{preparation.dpnid}})</h4>
-    </div>
+      <h4 class="page-title"> New Document Preparation ({{preparation.dpnid}})</h4> 
+   
   </div>
   <div class="row p-2">
     <div class="col">
@@ -55,7 +55,7 @@
           </div>
 
           <div class="form-group row" *ngIf="docNoType === 'User Defined'">
-            <label for="documentNumber" class="col-sm-2 col-form-label">Document Number<span
+            <label for="documentNumber" class="col-sm-2 col-form-label">Document No.<span
               style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
               <input type="text" class="form-control" id="documentNumber" name="documentNumber"
@@ -66,14 +66,7 @@
             </div>
           </div>
 
-          <div class="form-group row" *ngIf="docNoType !== 'User Defined'">
-            <label for="documentNumber" class="col-sm-2 col-form-label">Document Number<span
-              style="color: red; font-weight: bolder;">*</span></label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="documentNumber" name="documentNumber"
-                placeholder="System Generated" [(ngModel)]="preparation.documentno" readonly [disabled]="viewMode" />
-            </div>
-          </div>
+
 
           <div class="form-group row">
             <label for="docType" class="col-sm-2 col-form-label">Document Type</label>
