--- a/VlimsApp/ClientApp/src/app/modules/documents/components/document-types/document-types.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/document-types/document-types.component.html
@@ -17,10 +17,13 @@
                 </div>
                 
                 <div class="d-flex page-title-actions">
+
                     <div class="input-group">
-                        <input type="text" class="form-control" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search">
                         <span class="input-group-text"><i class="fas fa-search"></i></span>
+                        <input type="text" class="form-control" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search">
+                        
                       </div>
+                      
                   <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddDocumentType()" *ngIf="access">New</button>
                 </div>
               </div>
@@ -37,10 +40,10 @@
                 <ng-template pTemplate="header">
                     <tr>
                         <th>S.No</th>
-                        <th pSortableColumn="Documenttypename" style="width:20%">Document type Name<p-sortIcon field="Documenttypename"></p-sortIcon></th>
+                        <th pSortableColumn="Documenttypename" style="width:20%">Document Type Name<p-sortIcon field="Documenttypename"></p-sortIcon></th>
                         <th pSortableColumn="documenttypeprefix" style="width:10%"> Document Prefix Name <p-sortIcon field="documenttypeprefix"></p-sortIcon></th>
                         <!-- <th pSortableColumn="Description" style="width:15%">Description<p-sortIcon field="Description"></p-sortIcon></th> -->
-                        <th pSortableColumn="ModifiedBy" style="width:20%">Registered by<p-sortIcon field="ModifiedBy"></p-sortIcon></th>
+                        <th pSortableColumn="ModifiedBy" style="width:20%">Registered By<p-sortIcon field="ModifiedBy"></p-sortIcon></th>
                         <th pSortableColumn="ModifiedDate" style="width:200px">Registered On <p-sortIcon field="ModifiedDate"></p-sortIcon></th>
                         <th pSortableColumn="Status" style="width:200px">Status <p-sortIcon field="Status"></p-sortIcon></th>
                         <th style="width:80px">Modify</th>
