--- a/VlimsApp/ClientApp/src/app/modules/manager/components/document-revision/document-revision.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/document-revision/document-revision.component.html
@@ -4,8 +4,17 @@
            
             <div class="d-flex justify-content-between align-items-center">
                 <h4 class="page-title flex-grow-1">Document Revision</h4>
+                <div class="back-icon" style="margin-right: 10px;">
+                    <a href="javascript:void(0);" onclick="history.back();">
+                        <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+                    </a>
+                </div>
                 <div class="d-flex page-title-actions">
-                  <input type="text" class="form-control" placeholder="Search">
+                    <div class="input-group">
+                        <input type="text" class="form-control" pInputText type="text" (input)="templatesTable.filterGlobal($any($event.target)?.value, 'contains')"  placeholder="Search" />
+                        <span class="input-group-text"><i class="fas fa-search"></i></span>
+                      </div>
+                  
                   <!-- <button class="btn btn-primary mx-2" type="button" (click)="navigateToAddRequest()">New</button> -->
                 </div>
               </div>
@@ -14,13 +23,13 @@
     <div class="row p-2">
         <div class="col">
             <div class="p-4 bg-white shadow-dark rounded-2">
-            <p-table  [value]="revisionDatasource" tableStyleClass="table table-striped" [rows]="itemsPerPage"
+            <p-table #templatesTable [value]="revisionDatasource" tableStyleClass="table table-striped" [rows]="itemsPerPage"
             [paginator]="true" [totalRecords]="revisionDatasource.length"
             [rowsPerPageOptions]="rowsPerPageOptions" >
                 <ng-template pTemplate="header">
                     <tr>
-                        <th>#</th>
-                        <th pSortableColumn="atid" style="width:20%">Req Code<p-sortIcon field="atid"></p-sortIcon></th>                        
+                        <th>S.No</th>
+                        <th pSortableColumn="atid" style="width:20%">Request Code<p-sortIcon field="atid"></p-sortIcon></th>                        
                         <th pSortableColumn="documentTitle" style="width:10%">Document Title <p-sortIcon field="documentTitle"></p-sortIcon></th>
                         <th pSortableColumn="documentno" style="width:10%">Document No. <p-sortIcon field="documentno"></p-sortIcon></th>
                         <th pSortableColumn="documentType" style="width:10%">Document type <p-sortIcon field="documentType"></p-sortIcon></th>
