--- a/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/preparation/preparation.component.html
@@ -3,11 +3,14 @@
     <div class="col">
       <div class="d-flex justify-content-between align-items-center">
         <h4 class="page-title flex-grow-1">Document Preparation Configuration</h4>
+        
         <div class="back-icon" style="margin-right: 10px;">
-               <a href="javascript:void(0);" onclick="history.back();">
-                       <i class="bi bi-arrow-left-circle-fill" style="font-size: 32px;"></i>
-                    </a>
-        </div>
+          <a href="javascript:void(0);" onclick="history.back();">
+              <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+          </a>
+      </div>
+
+
         <div class="d-flex page-title-actions">
           <div class="input-group">
 
@@ -37,7 +40,7 @@
               </th>
 
               <th pSortableColumn="request Code" style="width: 10%">
-                Req Code<p-sortIcon field="request Code"></p-sortIcon>
+                Request Code<p-sortIcon field="request Code"></p-sortIcon>
               </th>
               <th pSortableColumn="documenttitle" style="width: 15%">
                 Document Name<p-sortIcon field="documenttitle"></p-sortIcon>
