--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-existing-document-request/review-existing-document-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-existing-document-request/review-existing-document-request.component.html
@@ -1,8 +1,15 @@
 <div class="container-fluid">
   <div class="row p-2">
-    <div class="col">
+
+    <div class="col d-flex justify-content-between align-items-center">
       <h4 class="page-title">{{editMode? 'Update': 'Add'}} Existing Document Request</h4>
+      <div class="back-icon" style="margin-right: 10px;">
+        <a href="javascript:void(0);" onclick="history.back();">
+          <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+        </a>
+      </div>
     </div>
+
   </div>
   <div class="row p-2">
     <div class="col">
@@ -73,7 +80,7 @@
             </div>
 
             <div class="form-group row">
-              <label for="documentType" class="col-sm-2 col-form-label">Document Number</label>
+              <label for="documentType" class="col-sm-2 col-form-label">Document No</label>
               <div class="col-sm-10">
                 <input type="text" class="form-control" id="dnumber" name="Dnumber" placeholder="Document Number"
                   [(ngModel)]="existingDocReq.documentno" #documentno="ngModel" required />
