--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-print/new-print-request.component.html
@@ -1,8 +1,15 @@
 <div class="container-fluid">
   <div class="row p-2">
-    <div class="col">
+    <div class="col d-flex justify-content-between align-items-center">
       <h4 class="page-title">{{editMode? 'Update': 'Add'}} Print Request</h4>
+      <div class="back-icon" style="margin-right: 10px;">
+        <a href="javascript:void(0);" onclick="history.back();">
+          <i class="bi bi-arrow-left-circle-fill" style="font-size: 30px;"></i>
+        </a>
+      </div>
     </div>
+
+   
   </div>
   <div class="row p-2">
     <div class="col">
@@ -10,7 +17,7 @@
         <div class="p-4 bg-white shadow-dark rounded-2">
 
           <div class="form-group row">
-            <label for="prefix" class="col-sm-2 col-form-label">Document Number<span
+            <label for="prefix" class="col-sm-2 col-form-label">Document No<span
               style="color: red; font-weight: bolder;">*</span></label>
             <div class="col-sm-10">
               <p-dropdown name="docType" [options]="preparations" [(ngModel)]="print.documentNumber"
