Existing document template

--- a/VlimsApp/ClientApp/src/app/modules/manager/components/review-existing-document-request/review-existing-document-request.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/manager/components/review-existing-document-request/review-existing-document-request.component.html
@@ -116,7 +116,7 @@
               <label for="document" class="col-sm-2 col-form-label">Browse Document</label>
               <div *ngIf="!existingDocReq.document" class="col-sm-10">
                 <input class="form-control" type="file" id="fileInput" name="fileInput" #fileInput
-                  [disabled]="isUploaded" (change)="onFileSelected($event)">
+                accept=".pdf" [disabled]="isUploaded" (change)="onFileSelected($event)">
                   <div *ngIf="isFileUploadError && printType == 'single'"
                   class="text-danger">
                   Document file upload is required.
