--- a/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
+++ b/VlimsApp/ClientApp/src/app/modules/documents/components/add-template/add-template.component.html
@@ -65,7 +65,7 @@
             <p-dropdown [options]="typesDatasource" [(ngModel)]="selectedtype" placeholder="Select a Document Type"
                 optionLabel="Documenttypename" id="types" name="types" [autoDisplayFirst]="false" [required]="true" #DocumenttypenameInput="ngModel">
              </p-dropdown>
-             <div *ngIf="DocumenttypenameInput.invalid && DocumenttypenameInput.touched" class="text-danger">
+             <div *ngIf="DocumenttypenameInput.invalid && (DocumenttypenameInput.dirty || DocumenttypenameInput.touched)" class="text-danger">
               Document Type is required.
             </div>
             <!-- <input
@@ -78,7 +78,7 @@
             /> -->
           </div>
         </div>
-        <div class="form-group row">
+        <!-- <div class="form-group row">
           <label for="description" class="col-sm-2 col-form-label">Description</label>
           <div class="col-sm-10">
             <textarea class="form-control mw-350"
@@ -91,7 +91,7 @@
                     </textarea>
                     
           </div>
-        </div>
+        </div> -->
         <div class="form-group row">
           <label for="templateName" class="col-sm-2 col-form-label">No. Of Pages <span style="color: red; font-weight: bolder;">*</span></label>
           <div class="col-sm-10">
@@ -179,7 +179,7 @@
                         
                       </td>
                     </ng-container>
-                    <td>
+                    <td *ngIf="rowIndex>0">
                       <button class="btn btn-danger btn-sm delete-button"
                               (click)="deleteRow(rowIndex)">
                         Delete
@@ -241,7 +241,7 @@
                         </div>
                       </td>
                     </ng-container>
-                    <td>
+                    <td *ngIf="rowIndex>0">
                       <button class="btn btn-danger btn-sm delete-button"
                               (click)="deletefooterRow(rowIndex)">
                         Delete
@@ -310,7 +310,7 @@
                         </div>
                       </td>
                     </ng-container>
-                    <td>
+                    <td *ngIf="rowIndex>0">
                       <button class="btn btn-danger btn-sm delete-button"
                               (click)="deletebodyRow(rowIndex)">
                         Delete
